--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,12 +1,15 @@
 /* Override some aspects of the pydata-sphinx-theme */
 
-body {
-  padding-top: 0px;
+:root {
+  --color-active-navigation: 0, 91, 129;
+  /* Use normal text color (like h3, ..) instead of primary color */
+  --color-h1: var(--color-text-base);
+  --color-h2: var(--color-text-base);
 }
 
-h1,
-h2 {
-  color: #333;
+
+body {
+  padding-top: 0px;
 }
 
 @media (min-width: 768px) {
@@ -22,21 +25,10 @@ code {
   color: #3b444b;
 }
 
-/* Default link color for active + larger font size for sidebar*/
+/* Larger font size for sidebar*/
 .bd-sidebar .nav > li > a {
   font-size: 1em;
 }
-
-.bd-sidebar .nav>li>a:hover,
-.bd-sidebar .nav > .active:hover > a,
-.bd-sidebar .nav > .active > a {
-  color: #005b81;
-}
-.toc-entry > .nav-link.active {
-  color: #005b81;
-  border-left:2px solid #005b81;
-}
-
 
 /* New element: brand text instead of logo */
 
