--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,21 +1,17 @@
 /* Override some aspects of the pydata-sphinx-theme */
 
 :root {
-  --color-active-navigation: 0, 91, 129;
+  --pst-color-active-navigation: 0, 91, 129;
   /* Use normal text color (like h3, ..) instead of primary color */
-  --color-h1: var(--color-text-base);
-  --color-h2: var(--color-text-base);
-}
-
-
-body {
-  padding-top: 0px;
+  --pst-color-h1: var(--pst-color-text-base);
+  --pst-color-h2: var(--pst-color-text-base);
+  --pst-header-height: 0px;
 }
 
 @media (min-width: 768px) {
   @supports (position: -webkit-sticky) or (position: sticky) {
     .bd-sidebar {
-      top: 40px;
+      padding-top: 3rem;
     }
   }
 }
